# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
diff_generator/: gendiff.py  main.py
diff_generator/output_formatters/: fmt_json.py  fmt_json_like.py  fmt_plain.py
diff_generator/scripts/: gendiff.py
diff_generator/scripts/output_formatters/: fmt_json_like.py  fmt_plain.py  main.py
gendiff/: main.py
gendiff/scripts/: file_loader.py  gendiff.py
tests/: test_gendiff.py
tests/fixtures/: expected_nested_json  expected_nested_json_like
