[tool.poetry]
name = "Dekevich_gendiff"
version = "0.3.0"
description = "diff calculator"
authors = ["Denis Dekevich <da.dekevich@gmail.com>"]
packages = [
    { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
