[tool.poetry]
name = "Dekevich_gendiff"
version = "0.3.0"
description = "diff calculator"
authors = ["Denis Dekevich <da.dekevich@gmail.com>"]
packages = [
    { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = "gendiff.main:main"

[tool.poetry.dependencies]
python = "^3.6"
coverage = "^5.2.1"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^6.0.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
